--- a/elements/rh-secondary-nav/rh-secondary-nav-dropdown.scss
+++ b/elements/rh-secondary-nav/rh-secondary-nav-dropdown.scss
@@ -7,7 +7,7 @@
 :host([expanded]){
   border-left-color: var(--rh-secondary-nav-brand-color);
   border-right-color: var(--rh-secondary-nav-divider-color);
-  box-shadow: 3px 3px 3px var(--rh-secondary-nav-divider-color);
+  box-shadow: var(--rh-secondary-nav-box-shadow);
 }
 
 ::slotted([slot="link"]) {
@@ -21,9 +21,16 @@
   display: block;
   width: 0.25rem;
   height: 0.25rem;
-  border-right: 0.15rem solid var(--rh-secondary-nav-font-color);
-  border-bottom: 0.15rem solid var(--rh-secondary-nav-font-color);
+  color: var(--rh-secondary-nav-top-level-link-color);
+  border-right: 0.15rem solid var(--rh-secondary-nav-top-level-link-color);
+  border-bottom: 0.15rem solid var(--rh-secondary-nav-top-level-link-color);
   transform: rotate(45deg) translate(-0.3rem, 0.15rem);
+}
+
+::slotted([slot="link"]:hover):after {
+  color: var(--rh-secondary-nav-top-level-link-hover-color);
+  border-right: 0.15rem solid var(--rh-secondary-nav-top-level-link-hover-color);
+  border-bottom: 0.15rem solid var(--rh-secondary-nav-top-level-link-hover-color);
 }
 
 ::slotted(a[aria-expanded="true"]):after {
