--- a/elements/rh-secondary-nav/rh-secondary-nav-menu.scss
+++ b/elements/rh-secondary-nav/rh-secondary-nav-menu.scss
@@ -18,7 +18,6 @@
   padding: 0 1rem;
 }
 
-
 ::slotted([slot="links"]) {
   list-style: none;
   margin: 1rem 0;
@@ -36,8 +35,7 @@
     top: var(--rh-secondary-nav-min-height);
     padding: 2rem;
     background: var(--rh-secondary-nav-subnav-background);
-    //box-shadow: 0 2px 8px rgba(0,0,0,.2);
-    box-shadow: 0px 2px 4px #15151533;
+    box-shadow: var(--rh-secondary-nav-box-shadow);
   }
 
   :host([type="fixed-width"]) {
